src/spx/tests/cli/commands/webjob/webjob.list.jobs.request.test.run.output.expect
(?# ---------- BANNER)
^SPX - Azure Speech CLI, Version [1]\.[0-9]{2}[^\r]+\r?$\n
^Copyright \(c\) 202[0-9] Microsoft Corporation\. All Rights Reserved\.\r?$\n
^\r?$\n


\r?\nListing jobs\.\.\.\r?$\n
^GET https://endpoint\.scm\.azurewebsites\.net//api/triggeredwebjobs HTTP/1\.1\r?$\n
^Accept: application/json\r?$\n
^Host: endpoint\.scm\.azurewebsites\.net\r?$\n
^Connection: Keep-Alive\r?$\n
^\r?$\n
^\r?$\n
^  ERROR!! The remote server returned an error: \(401\) Unauthorized\.\r?$\n